--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Sign up", class: 'btn btn-outline-outline-success mb-3 %>
+          <%= f.button :submit, "Sign up", class: 'btn btn-primary mb-3' %>
         </div>
       <% end %>
 
