--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.3) 0%, rgba(0,36,61,0.4) 50%), url('assets/background1.jpg'); ">
+  <div class="banner-content">
+    <h1>FIND A ROOM</h1>
+    <p>For work or vacation. Find a place to stay! </p>
+  </div>
+</div>
