--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,12 @@
 .navbar-ham {
   justify-content: space-between;
   background: white;
-}
+  
+  .navbar-collapse {
+    flex-grow: 0;
+  }
 
-.navbar-ham .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-ham .navbar-brand img {
-  width: 40px;
+  .navbar-brand img {
+    width: 40px;
+  }
 }
