--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,6 +3,26 @@
     <%= image_tag "logo.png" %>
     <% end %>
 
+  <div class="search-bar">
+    <div  class="form-inline padded">
+      <%= simple_form_for :search,  wrapper: :inline_form,  class: 'form-inline' do |t| %>
+        <%= t.input :city, as: :string,  label: false, input_html: { class:"form-control border-radius input", placeholder: "Cricklewood" } %>
+        <%= t.input :start_date, as: :string, label: false, input_html: { id: "start_date"}, placeholder: "Start Date" %>
+        <%= t.input :end_date, as: :string, label: false, input_html: { id: "end_date"},  placeholder: "End Date" %>
+        <%= t.input :name, :collection => %w[Male Female Any], selected: "Any", label: false %>
+        <%= t.submit "Search", class: "btn btn-primary" %>
+      <% end %> 
+    </div>
+    </div>
+
+
+
+
+
+
+
+
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -18,9 +38,9 @@
           <%= link_to "Bookings", "#", class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <%= image_tag"hat", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "hat", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Home", "#", class: "dropdown-item" %>
+            <%= link_to "Home", root_path, class: "dropdown-item" %>
             <%= link_to "Profile", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
