--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -4,6 +4,7 @@
   <p><%= @room.address %></p>
   <p><%= @room.city %></p>
   <p><%= @room.guest_nr %> guests</p>
-  <p>€<%= @room.price %></p>
+
+ <p>€<%=  number_with_precision(@room.price, precision: 2) %>  </p>
   <%= image_tag @room.photo %>
 </div>
