--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,25 +1,15 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-ham sticky-top">
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
     <% end %>
 
-  <div class="search-bar">
-    <div  class="form-inline padded">
-      <%= simple_form_for :search,  wrapper: :inline_form,  class: 'form-inline' do |t| %>
-        <%= t.input :city, as: :string,  label: false, input_html: { class:"form-control border-radius input", placeholder: "Cricklewood" } %>
-        <%= t.input :start_date, as: :string, label: false, input_html: { id: "start_date"}, placeholder: "Start Date" %>
-        <%= t.input :end_date, as: :string, label: false, input_html: { id: "end_date"},  placeholder: "End Date" %>
-        <%= t.input :name, :collection => %w[Male Female Any], selected: "Any", label: false %>
-        <%= t.submit "Search", class: "btn btn-primary" %>
-      <% end %> 
-    </div>
-    </div>
 
 
 
 
 
 
+<%# :url => savenew_photographers_path %>
 
 
 
@@ -32,7 +22,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Home", "#", class: "nav-link" %>
+          <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Bookings", "#", class: "nav-link" %>
