--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,17 +3,18 @@
     <%= image_tag "logo.png" %>
     <% end %>
 
+
+
   <div class="search-bar">
     <div  class="form-inline padded">
       <%= simple_form_for :search,  wrapper: :inline_form, method: :get, url: rooms_path,  class: 'form-inline' do |t| %>
-        <%= t.input :city, as: :string,  label: false, input_html: { class:"form-control border-radius input", placeholder: "Cricklewood" } %>
-        <%= t.input :start_date, as: :string, label: false, input_html: { id: "start_date"}, placeholder: "Start Date" %>
-        <%= t.input :end_date, as: :string, label: false, input_html: { id: "end_date"},  placeholder: "End Date" %>
-         <%= t.input :guests, as: :integer, label: false, input_html: { id: "guest_num", maxLength: 2, min: 1, style: 'width: 110px'},  placeholder: "Guests" %>
+        <%= t.input :city,  label: false, input_html: { value: "", class:"form-control border-radius input", placeholder: "Cricklewood" } %>
         <%= t.submit "Search", class: "btn btn-primary" %>
       <% end %> 
     </div>
     </div>
+
+
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
