--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,10 +1,55 @@
-<h1 class="text-center mt-3"><%= @room.name %></h1>
-<div class="container">
-  <p><%= @room.description %></p>
-  <p><%= @room.address %></p>
-  <p><%= @room.city %></p>
-  <p><%= @room.guest_nr %> guests</p>
+  <div class="container">
+      <div class="row">
+        <div class="col-12 col-lg-8 col-md-6">
+ 
+        
+          <%= image_tag @room.photo, class: "d-block w-100 rounded mt-3", width: 400, height: 300 %>
 
- <p>€<%=  number_with_precision(@room.price, precision: 2) %>  </p>
-  <%= image_tag @room.photo %>
-</div>
+        <h1 class="text-center mt-3"><%= @room.name %></h1>
+        <p><%= @room.description %></p>
+        <p><%= @room.street %>, <%= @room.city %></p>
+         <p><%= @room.guest_nr %> guests  €<%=  number_with_precision(@room.price, precision: 2) %>  </p>
+  
+        </div>
+
+       <div class="col-12 col-md-6 col-lg-4">
+       <div class="border rounded p-3 my-3">
+         <h2>Book this room</h2>
+         <form action="#">
+           <div class="form-group">
+             <label for="">Message</label>
+             <input
+               type="text"
+               placeholder="Write something nice"
+               class="form-control"
+             />
+           </div>
+           <div class="form-group">
+             <label for="">Arrival</label>
+             <input
+               type="text"
+               placeholder="02/02/2020"
+               class="form-control"
+             />
+           </div>
+           <div class=" form-group">
+             <label for="">Departure</label>
+             <input
+               type="text"
+               placeholder="02/02/2020"
+               class="form-control"
+             />
+           </div>
+           <input
+             type="submit"
+             value="Book Now"
+             class="btn btn-primary btn-lg w-100"
+           />
+         </form>
+         </div>
+       </div>
+     </div>
+     
+
+      </div>
+    </div>
