--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -15,7 +15,7 @@
        <div class="col-12 col-md-6 col-lg-4">
        <div class="border rounded p-3 my-3">
          <h2>Book this room</h2>
-         <form action="#">
+         <%# <form action="#">
            <div class="form-group">
              <label for="">Message</label>
              <input
@@ -45,7 +45,39 @@
              value="Book Now"
              class="btn btn-primary btn-lg w-100"
            />
-         </form>
+         </form> %>
+
+         <%= render 'bookings/new_booking' %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
          </div>
        </div>
      </div>
