--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Room Bookings here</h1>
 
 <% @bookings.each do |booking| %>
-  <p><%= booking.room.name %> : <%= booking.start_date %> - <%= booking.end_date %></p>
+  <p><%= booking.room.name %> : <%= booking.start_date %> - <%= booking.end_date %>. Status: <%= booking.status %></p>
 
 <% end %>
