--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Room Bookings here</h1>
 
 <% @bookings.each do |booking| %>
-  <p><%= booking.room.name %> : <%= booking.start_date %> - <%= booking.end_date %>. Status: <%= booking.status %></p>
+  <p><%= booking.room.name %> : <%= booking.start_date %> - <%= booking.end_date %>. Status: <%= booking.status %>
 
+<%= link_to "Delete", booking_path(booking), method: :delete, data: { confirm: 'Deleting. Are you sure?'}, class: "text-danger"  %>
+</p>
 <% end %>
