--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,10 +2,11 @@
 
 <% @bookings.each do |booking| %>
 
-  <p><%= booking.room.name %> : <%= booking.start_date %> - <%= booking.end_date %>. Status: <%= booking.status %>
+   <p><%= link_to booking.room.name, booking_path(booking)  %>
+   : <%= booking.start_date %> - <%= booking.end_date %>. Status: <%= booking.status %>
 
   <% if booking.status == 'Pending' %>
-    <%= link_to "Delete", booking_path(booking), method: :delete, data: { confirm: 'Deleting. Are you sure?'}, class: "text-danger"  %>
+    <%= link_to "Delete", booking_path(booking), method: :delete, data: { confirm: 'Deleting. Are you sure?'}, class: "btn btn-sm btn-danger"  %>
   <% end %>
   </p>
 <% end %>
