fix map and search glitch

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -18,3 +18,11 @@
   border-top-right-radius: 4px;
   background-position: center;
 }
+
+.card-index {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr ;
+  grid-gap: 16px;
+  padding: 16px;
+  flex-grow: 1;
+}
