--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -16,13 +16,11 @@
             <% end %>
           </div>
         <% end %> 
-    </div>
+
+  <div id="map"
+        style="width: 100%; height: 600px;"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
-
-<div id="map"
-     style="width: 100%; height: 600px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-
-
+  </div>
 </div>
