--- a/app/views/bookings/_new_booking.html.erb
+++ b/app/views/bookings/_new_booking.html.erb
@@ -4,7 +4,7 @@
  <%= simple_form_for [@room, @booking], url: room_bookings_path(@room) do |f| %>
      <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
      <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-     <%= f.input :guest_nr, label: "Number of Guests" %>
+     <%= f.input :guest_nr, as: :integer, required: true, label: "Number of Guests" %>
     <%= f.button :submit ,"Book", class: "btn btn-primary" %>
     <% end %>
 
