--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,5 +1,10 @@
+.map-container {
+  display: flex;
+}
+
 #map {
-  height: 100vh;
+  height: 90vh;
+  width: 100vw;
   position: sticky;
-  top: 0;
+  top: 50px;
 }
