--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -8,7 +8,7 @@
         <h1 class="text-center mt-3"><%= @room.name %></h1>
         <p><%= @room.description %></p>
         <p><%= @room.street %>, <%= @room.city %></p>
-         <p><%= @room.guest_nr %> guests  €<%=  number_with_precision(@room.price, precision: 2) %>  </p>
+         <p>Guests: <%= @room.guest_nr %> &nbsp;&nbsp;&nbsp;&nbsp;     £<%=  number_with_precision(@room.price, precision: 2) %>  </p>
   
         </div>
 
