--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,12 +1,43 @@
-<h1>Room Bookings here</h1>
+<div class="container-fluid">
 
-<% @bookings.each do |booking| %>
+  <h1 class="text-center mt-3">Your Booked Rooms</h1>
+<div class="container-booking">
+  <ul>
+    <% @bookings.each do |booking| %>
+    <li class="booking-li">
+      <%# <p>image goes here</p> %>
+       
+       <img class="booking-image hidden-xs" width: 400, height: 300, crop: :fill, src="https://source.unsplash.com/400x300/?bedrooms&rand=<%= rand( 9999) %>" />
+      <div class="booking-body">
+        <h3><%= booking.room.name %></h3>
+        <p>City: <strong><%= booking.room.city %></strong></p>
+        <p>Address: <strong><%= booking.room.street %></strong></p>
+        <p>Period: <strong> <%= booking.start_date.strftime("%a, %e %b %Y") %> - <%= booking.end_date.strftime("%a, %e %b %Y") %></strong></p>
+        <p>Guests: <strong><%= booking.guest_nr %></strong></p>
+        <p>Total price: <strong>£ <%= booking.price %> </strong></p>
+      </div> <!-- end booking-body -->
 
-   <p><%= link_to booking.room.name, booking_path(booking)  %>
-   : <%= booking.start_date %> - <%= booking.end_date %>. Price: £<%= booking.price %> Status: <%= booking.status %>
+       <div>
+   <ul class="list-unstyled hidden-sm hidden-xs padded">
+      <% if booking.status == 'Pending' %>
+        <li>Confirmation <strong class="text-warning">Pending</strong></li>
+        <li class="text-right"><%= link_to "Delete this booking", booking_path(booking), method: :delete, class:"btn btn-outline-danger", data: {confirm: "Are you sure"} %></li>
+      <% else %>
+        <li>Booking <strong class="text-success">Confirmed</strong></li>
+       <li> <%= mail_to booking.room.user.email, "Email room owner to cancel", target: :_blank %></li>
+      <% end %>
+   </ul>
+ </div>
+    </li>
+ 
 
-  <% if booking.status == 'Pending' %>
-    <%= link_to "Delete", booking_path(booking), method: :delete, data: { confirm: 'Deleting. Are you sure?'}, class: "btn btn-sm btn-danger"  %>
-  <% end %>
-  </p>
-<% end %>
+
+    
+    <% end %>
+
+  </ul>
+
+
+  </div> <!-- end container-booking -->
+  
+</div>
