style booking list

--- a/app/assets/stylesheets/pages/_booking.scss
+++ b/app/assets/stylesheets/pages/_booking.scss
@@ -39,3 +39,22 @@
   width: 175px;
   height: 145px;
 }
+
+
+// @media (max-width: 900px) {
+//   .container-booking {
+//     width: 700px;
+//   }
+// }
+
+// @media (max-width: 700px) {
+//   .container-booking {
+//     width: 500px;
+//   }
+// }
+
+// @media (max-width: 500px) {
+//   .container-booking {
+//     width: 400px;
+//   }
+// }
