--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,4 +1,4 @@
- <div class="container">
+ <div class="container-fluid">
  <h1 class="text-center">Welcome <%= current_user.first_name%>!</h1>
 
  <h3 class="text-center pb-3">Here you can find your bookings </h3>
