--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,4 +1,4 @@
-  <div class="container">
+  <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-lg-8 col-md-6">
  
