--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -9,7 +9,7 @@
      <%= f.input :city, as: :string, required: true %>
      <%= f.input :guest_nr, as: :integer, required: true, label: "Number of Guests" %>
      <%= f.input :photo, as: :string, required: false %>
-    <%= f.button :submit ,"Book", class: "btn btn-primary" %>
+    <%= f.button :submit ,"Add Room", class: "btn btn-primary" %>
     <% end %>
 
   </div>
