--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,7 +36,7 @@
         </a>
         <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Add a Room", new_room_path, class: "nav-link mr-1" %>
-          <%= link_to "List Properties", href="#", class: "nav-link mr-1" %>
+          <%= link_to "List Properties", dashboards_path, class: "nav-link mr-1" %>
         </div>
       </li>     
 
