--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -2,8 +2,17 @@
   <div class="row">
     <div class="col-8 offset-2">
   
+  <div class="show-banner">
+       <% if @room.photo.attached? %>
+       <%= cl_image_tag @room.photo.key, class: "d-block w-00 rounded mt-3",class: "d-block w-100 rounded mt-3", width: 520, height: 400, crop: :fill %>
+      <% else %>
+      <%= image_tag "No_image_available", class: "d-block w-100 rounded mt-3", width: 520, height: 400, crop: :fill %>
+      <% end %>
+</div>
 
-      <%= cl_image_tag @room.photo.key, class: "d-block w-100 rounded mt-3", height: 300, width: 400, crop: :fill %>
+  
+
+   
   
       <h1 class="text-center my-3"><%= @room.name %></h1>
      
