--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -3,8 +3,12 @@
       <div class="col-12 col-lg-8 col-md-6">
     
 
-       
-       <%= cl_image_tag @room.photo.key, class: "d-block w-100 rounded mt-3",class: "d-block w-100 rounded mt-3", height: 300, width: 400, crop: :fill %>
+       <% if @room.photo.attached? %>
+       <%= cl_image_tag @room.photo.key, class: "d-block w-100 rounded mt-3",class: "d-block w-100 rounded mt-3 mx-auto", , height: 300, width: 400, crop: :fill %>
+      <% else %>
+      <%= image_tag "No_image_available", class: "d-block w-100 rounded mt-3", width: 400, height: 300 %>
+      <% end %>
+
 
         <h1 class="text-center mt-3"><%= @room.name %></h1>
         <p><%= @room.description %></p>
