--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,6 +27,8 @@
                         hint: "we need your current password to confirm your changes",
                         required: true,
                         input_html: { autocomplete: "current-password" } %>
+                      <%= f.input :photo, as: :file, label: "Avatar" ,
+                        required: false %>
           </div>
 
           <div class="form-actions">
