--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,8 +41,14 @@
       </li>     
 
         <li class="nav-item dropdown">
+        <% unless current_user.photo.attached? %>
           <%= image_tag "avatar", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+         <% else %> 
+       <%= cl_image_tag current_user.photo.key, height: 40, width: 40, crop: :fill, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <% end %>
+          
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+
 
                     <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
             <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
