--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,18 +1,33 @@
 
 .cardContainer {
+  display: flex;
   box-shadow: 2px 4px 5px #E8F1F5;
   border-radius: 4px;
+  &:hover {
+    box-shadow: 8px 8px 16px 0 rgba(0, 0, 0, 0.2);
+  }
+  img {
+    width: 50%;
+  }
 }
 
-.cardContainer:hover{
-  opacity: 0.5;
+.card {
+  height: 65px;
+  background-size: cover !important;
+  color: black;
+  position: relative;
+  border-radius: 5px;
+  margin-bottom: 20px;
+
 }
+
+
 
 .card-image {
-  height: 175px;
+  height: 300px;
   background-size: cover !important;
   position: relative;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
   color: white;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
@@ -25,4 +40,21 @@
   grid-gap: 16px;
   padding: 16px;
   flex-grow: 1;
+}
+
+
+
+.card-description {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  padding-bottom: 10px;
+
+  h2 {
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 13px;
+  }
 }
