--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,30 +1,33 @@
 <div class="container-fluid mt-3">
   <div class="row">
+<!-- left half of page-->  
     <div class="col-sm-8">
 
-    <div class="row">
+     <div class="row">
 
       <% @rooms.each do |room| %>
-        <div class="col-xs-12 col-sm-6 col-md-4  ">
+        <div class="col-xs-12 col-sm-6  ">
+
   
             <%= link_to room_path(room) do %>
-                <div class="cardContainer">
-                
-          <% if room.photo.attached? %>
-            <%= cl_image_tag @room.photo.key, class: "d-block w-00 rounded mt-3", width: 520, height: 400, crop: :fill %>
-          <% else %>
-            <%= image_tag "No_image_available", class: "d-block w-100 rounded mt-3", width: 520, height: 400, crop: :fill %>
-          <% end %>             
-                  
-                
-                  
-                  <div class="card-body">
-                      <h4 class="card-title"><%= room.name %></h4>
-                      <p class="card-text"> <%= room.city %></p>
-                      <p class="card-trip-pricing">£<%=  number_with_precision(room.price, precision: 2) %>/night</p>
-                  </div>     
-                </div>   <!-- end of cardContainer -->
-             <% end %>
+
+          <div class="cardContainer m-2">
+
+   <% if room.photo.attached? %>
+       <%= cl_image_tag room.photo.key %>
+      <% else %>
+      <%= image_tag "No_image_available" %>
+      <% end %>
+
+  
+                <div class="card-body">
+                  <h4 class="card-title"><%= room.name %></h4>
+                  <p class="card-text"> <%= room.city %></p>
+                  <p class="card-trip-pricing">£<%=  number_with_precision(room.price, precision: 2) %>/night</p>
+                </div>
+          </div>
+
+            <% end %>  
 
              
         </div>  <!-- end of xs-12 -->
@@ -43,5 +46,6 @@
         </div>  
     </div>  <!-- map container end-->
   </div>  <!-- col-sm-4 end  -->
+
  </div>  <!---end of row -->
-</div>
+</div>   <!-- cont-fluid -->
