--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -3,10 +3,12 @@
       <div class="col-12 col-lg-8 col-md-6">
     
 
-       <% if @room.photo.attached? %>
-       <%= cl_image_tag @room.photo.key, class: "d-block w-100 rounded mt-3 mx-auto" , height: 300, width: 400, crop: :fill %>
+
+
+      <% if @room.photo.attached? %>
+        <%= cl_image_tag @room.photo.key, class: "d-block w-100 rounded mt-3 mx-auto" , width: 400 %>
       <% else %>
-      <%= image_tag "No_image_available", class: "d-block w-100 rounded mt-3 mx-auto", width: 400, height: 300 %>
+        <%= image_tag "No_image_available", class: "d-block w-100 rounded mt-3 mx-auto", width: 400, height: 300 %>
       <% end %>
 
 
