--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,25 +3,50 @@
   display: flex;
   box-shadow: 2px 4px 5px #E8F1F5;
   border-radius: 4px;
+  margin: 12px;
   &:hover {
     box-shadow: 8px 8px 16px 0 rgba(0, 0, 0, 0.2);
   }
   img {
-    width: 50%;
+    width: 100%;
+  }
+  &:hover {
+    text-decoration: none;
   }
 }
 
-.card {
-  height: 65px;
-  background-size: cover !important;
-  color: black;
-  position: relative;
-  border-radius: 5px;
-  margin-bottom: 20px;
 
+
+
+.card-index {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1.25rem;
+  color: rgb(50,50,50);
+  background-color: #f2fafa;
+  h4, p {
+    text-shadow: none;
+  }
 }
 
+// .card-index {
+  //   display: grid;
+  //   grid-template-columns: 1fr 1fr 1fr ;
+  //   grid-gap: 16px;
+  //   padding: 16px;
+  //   flex-grow: 1;
+  // }
 
+  .card {
+    // height: 65px;
+    background-size: cover !important;
+    color: black;
+    position: relative;
+    border-radius: 5px;
+    margin-bottom: 20px;
+  
+  }
 
 .card-image {
   height: 300px;
@@ -34,13 +59,7 @@
   background-position: center;
 }
 
-.card-index {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr ;
-  grid-gap: 16px;
-  padding: 16px;
-  flex-grow: 1;
-}
+
 
 
 
