--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
       <% if room.photo.attached? %>
        <%= cl_image_tag room.photo.key, class: "d-block w-00 rounded mt-3", width: 520, height: 400, crop: :fill %>
       <% else %>
-      <%= image_tag "No_image_available", class: "d-block w-100 rounded mt-3", width: 520, height: 400, crop: :fill %>
+      <%= image_tag "no_image_available", class: "d-block w-100 rounded mt-3", width: 520, height: 400, crop: :fill %>
       <% end %>
 
 
