--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,34 +1,37 @@
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12 col-lg-8 col-md-6">
+<div class="main-container" >
+
+
+    <div class="show-room">
+
     
-
-
-
-      <% if @room.photo.attached? %>
-        <%= cl_image_tag @room.photo.key, class: "d-block w-100 rounded mt-3 mx-auto" , width: 400 %>
-      <% else %>
-        <%= image_tag "No_image_available", class: "d-block w-100 rounded mt-3 mx-auto", width: 400, height: 300 %>
-      <% end %>
+    
+        <% if @room.photo.attached? %>
+          <%= cl_image_tag(@room.photo.key, width: 520, height: 400, crop: :fill, class: "mt-3")   %>
+        <% else %>
+          <%= image_tag("no_image_available", width: 520, height: 400, crop: :fill) %>
+        <% end %>
 
 
         <h1 class="text-center mt-3"><%= @room.name %></h1>
-        <p><%= @room.description %></p>
-        <p><%= @room.street %>, <%= @room.city %></p>
-        <p>Guests: <%= @room.guest_nr %> &nbsp;&nbsp;&nbsp;&nbsp;     £<%=  number_with_precision(@room.price, precision: 2) %>  </p>
-  
-      </div>
+        <div class="pl-3">
+          <p><%= @room.description %></p>
+          <p><%= @room.street %>, <%= @room.city %></p>
+          <p>Guests: <%= @room.guest_nr %> &nbsp;&nbsp;&nbsp;&nbsp;     £<%=  number_with_precision(@room.price, precision: 2) %>  </p>
+        </div>
+
+      </div>   <!-- col -->
 
 
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="border rounded p-3 my-3">
-        
-          <h2>Book this room</h2>
+      <div class="show-room sticky-top" >
+
+          <h2 class="text-center">Book this room</h2>
 
           <%= render 'bookings/new_booking' %>
 
-        </div>
+        
       </div>
-    </div>
-  </div>
-</div>
+    </div>  <!-- col -->
+  </div>  <!-- row -->
+
+
+</div>  <!-- end container -->
