--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container-booking mt-4">
+  <h2 class="text-center mt-2 mb-4">Your Lettings</h2>
   <div class="row">
     <div class="col">
 
