--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,31 +10,33 @@
 
 <div class="container mt-3">
   <div class="row">
-        <% @rooms.each do |room| %>
+   <% @rooms.each do |room| %>
+    <div class="col-xs-12 col-md-6  ">
 
-          <div class="col-sm-6 col-md-4 col-lg-3">
-            <%= link_to room_path(room) do %>
-              <div class="cardContainer">
-                
-
-      <% if room.photo.attached? %>
-       <%= cl_image_tag room.photo.key, class: "d-block w-00 rounded mt-3", width: 520, height: 400, crop: :fill %>
-      <% else %>
-      <%= image_tag "no_image_available", class: "d-block w-100 rounded mt-3", width: 520, height: 400, crop: :fill %>
-      <% end %>
-
-
-
-                <div class="card-body">
-                    <h4 class="card-title"><%= room.name %></h4>
-                    <p class="card-text"> <%= room.city %></p>
-                    
-                    <p class="card-trip-pricing">€<%=  number_with_precision(room.price, precision: 2) %>/night</p>
-                </div>     
-              </div>
+      <div class="cardContainer ">
+        <%= link_to room_path(room) do %>
+        
+          <div class="card-image">
+            <% if room.photo.attached? %>
+              <%= cl_image_tag room.photo.key, height: "50%", style: "object-fit: cover" %>
+            <% else %>
+              <%= image_tag "no_image_available", height: "50%",  style: "object-fit: cover" %>
             <% end %>
+
+            <div class="card-index">
+              <div class="ml-4">
+                <h4 class="card-title"><%= room.name %></h4>
+                <p class="card-text"> <%= room.city %></p>
+                <p class="card-trip-pricing">£<%=  number_with_precision(room.price, precision: 2) %>/night</p>
+              </div>
+            </div>
+
           </div>
-        <% end %> 
+          
+        <% end %>  
+      </div>  <!-- cardContainer -->
+    </div>
+  <% end %> 
     </div>
   </div>
 
